# ArcLightning

./: .gitignore  CODE_OF_CONDUCT.md  README.md  toy_client.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
arcade/: docker-compose.yml
arcade/backend/: Dockerfile
arcade/backend/arclightning_backend/: Cargo.toml
arcade/backend/arclightning_backend/src/: main.rs
arcade/frontend/: Dockerfile
arcade/frontend/web/: arcade.js  index.html
arclightning_backend/: .gitignore  Cargo.toml  arclightning_controller.cfg  asdf.toml  server_config.toml  test.rs
arclightning_backend/System/: _App.ini
arclightning_backend/src/: .main.rs.rustfmt  .main.rs.swp  .router.rs.swo  config.rs  game.rs  game_config.rs  lib.rs  main.rs  password.rs  router.rs  splash.rs  tests.rs  volume.rs
arclightning_backend/test_files/: test_games.json  test_games.toml  toy_client.py
arclightning_frontend/: 404.html  demonstration.html  demonstration.js  games.html  games.js  index.html  package-lock.json  package.json  start.html
arclightning_frontend/demo_videos/: Demo2_ddr.webm
arclightning_frontend/vue-app/: README.md  package-lock.json  package.json
arclightning_frontend/vue-app/src/: App.vue
arclightning_frontend/vue-app/src/components/: HelloWorld.vue
arclightning_web/: 404.html  login.html  registration.html  settings.html
rand_gen/src/: main.rs
