[package]
name = "arclightning_backend"
version = "0.1.0"
authors = ["sremedios <sam.remedios@gmail.com>"]

[dependencies]
bcrypt = "0.2"
blake2-rfc = "0.2"
futures = "0.1"
hyper = "0.12"
hyper-staticfile = "0.3"
rand ="0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
toml = "0.4"
hex = "0.3.2"
